apps/readarr/overlays/prod/ingress-route-ext.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: readarr-ingress-ext
  namespace: media
spec:
  entryPoints:
    - websecure-ext
  routes:
    - match: Host(`readarr.sobrinho.pt`)
      kind: Rule
      middlewares:
        - name: middleware-auth-forward
          namespace: traefik
      services:
        - name: readarr
          port: main
