apps/readarr/overlays/prod/ingress-route.yaml
kind: IngressRoute
apiVersion: traefik.io/v1alpha1
metadata:
  name: readarr-ingress
  namespace: media
  annotations:
    external-dns.alpha.kubernetes.io/target: infra-int

spec:
  entryPoints:
    - websecure
    - websecure-ext
  routes:
    - match: Host(`readarr.sobrinho.pt`)
      kind: Rule
      services:
        - name: readarr
          port: main
